--- a/error.html
+++ b/error.html
@@ -13,10 +13,11 @@ body {
   padding: 0;
   width: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 .login-pg {
-  margin: auto auto;
+  margin: 10vh auto;
   background: #141929;
   border-radius: 25px;
   display: grid;
