--- a/Files/home.html
+++ b/Files/home.html
@@ -810,6 +810,7 @@
                 <span></span>
                 Fun Zone
             </button>
+            <a href = "https://frosty-kilby-23026f.netlify.app/">
             <button type="submit" value="friends" name="button">
                 <span></span>
                 <span></span>
@@ -817,6 +818,7 @@
                 <span></span>
                 Friends
             </button>
+            </a>
         </form>
     </div>
     <div class="container">
