--- a/Files/notice.html
+++ b/Files/notice.html
@@ -322,13 +322,15 @@
           <span></span>
           Fun Zone
         </button>
-        <button value="friends" name="button">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          Friends
-        </button>
+         <a href = "https://frosty-kilby-23026f.netlify.app/">
+            <button type="submit" value="friends" name="button">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Friends
+            </button>
+            </a>
       </form>
     </div>
     <div class="time-table">
