--- a/Files/notice.html
+++ b/Files/notice.html
@@ -323,14 +323,14 @@
           Fun Zone
         </button>
          <a href = "https://frosty-kilby-23026f.netlify.app/">
-            <button type="submit" value="friends" name="button">
+            <button>
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
                 Friends
             </button>
-            </a>
+        </a>
       </form>
     </div>
     <div class="time-table">
