--- a/Files/time.html
+++ b/Files/time.html
@@ -369,7 +369,7 @@
           Fun Zone
         </button>
          <a href = "https://frosty-kilby-23026f.netlify.app/">
-            <button type="submit" value="friends" name="button">
+            <button>
                 <span></span>
                 <span></span>
                 <span></span>
